272 - Set workflow task’s name to mandatory